...
                        footer: Text("Get notified to write every day at \(notificationTimeString).")) {

                    Toggle("Daily Reminder", isOn: $isScheduled)
                        .onChange(of: isScheduled) {
                            handleIsScheduledChange(isScheduled: isScheduled)
                        }
                        .accessibilityIdentifier("ReminderToggle")

                    if isScheduled {
                        HStack {
                            Text("Time")

                            Spacer()

                            Button {
                                showDatePicker.toggle()
                            } label: {
                                Text(notificationTimeString)
                            }
                            .accessibilityIdentifier("NotificationTime")
                            .buttonStyle(.borderedProminent)
                            .buttonBorderShape(.roundedRectangle(radius: 10))
                            .popover(isPresented: $showDatePicker, attachmentAnchor: .point(.leading)) {
                                DatePicker("Notification Time", selection: Binding(
                                    get: {
                                        // Get the notification time schedule set by user
...
